--- a/image_geometry/package.xml
+++ b/image_geometry/package.xml
@@ -22,6 +22,8 @@
   <depend>libopencv-dev</depend>
   <depend>sensor_msgs</depend>
   <depend>python3-deprecated</depend>
+  <exec_depend>cv2</exec_depend>
+  <exec_depend>numpy</exec_depend>
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_cmake_pytest</test_depend>
